--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ka">
 
 <head>
-	<title>ბექასა და ნინოს ქორწილის მოსაწვევი</title>
+	<title>ბექასა და ნინოს ქორწილის</title>
 
 	<!--meta tags -->
 	<meta charset="UTF-8">
