--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 	<!--counter-->
 	<div class="days-coming">
 		<div class="container">
-		<h3 class="title tittle">ქორწილის დღე</h3>
+		<h3 class="title tittle">ქორწილი იქნება</h3>
 			<div class="timer_wrap">
 				<div id="countdown" class="row h-100 justify-content-center align-items-center"></div>
 
