--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
    <!-- lightbox slider-->
 
 	<!--stylesheets-->
-	<link href="css/style.css" rel='stylesheet' type='text/css' media="all">
+	<link href="css/style.css" rel="stylesheet" type="text/css" media="all">
 	<!--//stylesheets-->
 	<link href="//fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
@@ -141,7 +141,7 @@
     <div class="blog" id="blog">
 	<div class="container">
 	<div class="blog-two-grids">
-	<h3 class="title tittle">OUR BLOG</h3>
+	<h3 class="title tittle">ჩვენი ისტორია</h3>
 			<div class="blog-top-grids">
 				<div class="col-md-7 blog-grid left-side">
 					<h4>Max Will
@@ -428,8 +428,8 @@
 	</div>
 	<!--contact-->
 		
-<!-- <div class="map-grid"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2484.39147015461!2d11.968411315519182!3d51.48768331996591!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a66353e6e3b99d%3A0xd664817f7142f654!2sRadio+ Event Planner!5e0!3m2!1sen!2sin!4v1446724465130"> </iframe> -->
-					</div>
+<!-- <div class="map-grid"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2484.39147015461!2d11.968411315519182!3d51.48768331996591!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a66353e6e3b99d%3A0xd664817f7142f654!2sRadio+ Event Planner!5e0!3m2!1sen!2sin!4v1446724465130"> </iframe>
+					</div> -->
 	<div class="contact" id="contact">
    <div class="container"> 
    <h3 class="title clr">Contact</h3>
@@ -557,8 +557,7 @@
 
 
 	<!--js working-->
-	<script type='text/javascript' src='js/jquery-2.2.3.min.js'></script>
-	<script src="js/bootstrap.js"></script>
+
 	<!-- //js  working-->
 
 			<!--  light box js -->
