--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-				<h1><a class="navbar-brand" href="index.html">BLI<span>SS</span>FUL</a></h1>
+				<a class="navbar-brand" href="index.html"><img src="images/logo.png">
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
