--- a/index.html
+++ b/index.html
@@ -16,11 +16,6 @@
 	<!--//meta tags ends here-->
 
 	<!--booststrap-->
-<!-- Bootstrap CSS -->
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" >
-
-<!-- Bootstrap JS -->
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 	
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 	<!--//booststrap end-->
@@ -42,11 +37,10 @@
    <!-- lightbox slider-->
 
 	<!--stylesheets-->
-	<link href="css/style.css" rel="stylesheet" type="text/css" media="all">
+	<link href="css/style.css" rel='stylesheet' type='text/css' media="all">
 	<!--//stylesheets-->
 	<link href="//fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-
 </head>
 
 <body>
@@ -65,7 +59,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-				<h1><a class="navbar-brand" href="index.html"><img src="images/logo.png"></h1>
+				<h1 style="width:80px;"><a class="navbar-brand" href="index.html"><img src="images/logo.png"></h1>
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
