--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 				<nav>
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="index.html">მთავარი</a></li>
-						<!-- <li><a href="#about" class="scroll">ჩვენს შესახებ</a></li> -->
-						<!-- <li><a href="#services" class="scroll">Services</a></li> -->
+						<li><a href="#about" class="scroll">ჩვენს შესახებ</a></li> 
+					<li><a href="#services" class="scroll">Services</a></li> 
 						<li><a href="#blog" class="scroll">ბლოგი ჩვენზე</a></li>
 						<li><a href="#gallery" class="scroll">გალერია</a></li>
 						<li><a href="#nishnoba" class="scroll">ნიშნობა</a></li>
