--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-
+\
 <!DOCTYPE html>
 <html lang="ka">
 
 <head>
-	<title>ბექასა და ნინოს ქორწილი</title>
+	<title>Blissful Wedding Category Bootstrap Responsive Web Template | Home :: w3layouts</title>
 
 	<!--meta tags -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="keywords" content="ქორწილი, ბექასა და ნინოს ქორწილი, ლამაზი დღე" />
+	<meta name="keywords" content="Blissful Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 	<script type="application/x-javascript">
 		addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); }
@@ -41,6 +42,7 @@
 	<!--//stylesheets-->
 	<link href="//fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+
 </head>
 
 <body>
@@ -54,20 +56,24 @@
 	<nav class="navbar navbar-default">
 			<div class="navbar-header navbar-left">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-						<span class="sr-only">მენიუ</span>
+						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
-					</button>
-				<h1 style="width:80px;"><a class="navbar-brand" href="index.html"><img src="images/logo.png"></h1>
-			</div>
+					</button>							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+					<h1><a class="navbar-brand" href="index.html"><img style="width: 80px;" src="images/logo.png"></a></h1>
+				</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
 				<nav>
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="index.html">მთავარი</a></li>
-						<li><a href="#about" class="scroll">ჩვენს შესახებ</a></li> 
-					<li><a href="#services" class="scroll">Services</a></li> 
+						<!-- <li><a href="#about" class="scroll">ჩვენს შესახებ</a></li> -->
+						<!-- <li><a href="#services" class="scroll">Services</a></li> -->
 						<li><a href="#blog" class="scroll">ბლოგი ჩვენზე</a></li>
 						<li><a href="#gallery" class="scroll">გალერია</a></li>
 						<li><a href="#nishnoba" class="scroll">ნიშნობა</a></li>
@@ -122,8 +128,7 @@
 		<div class="container">
 		<h3 class="title tittle">ქორწილი იქნება</h3>
 			<div class="timer_wrap">
-				<div id="countdown" class="row h-100 justify-content-center align-items-center"></div>
-
+				<div id="countdown"></div>
 			<div class="clear fix"></div>
 		</div>
 	</div>
@@ -618,7 +623,12 @@
 	</script>
 	<!-- //here ends scrolling icon -->
 
-	
+	<script>
+      window.dataLayer = window.dataLayer || [];
+	  $('#countdown').countdown({
+            year: 2020,
+        });
+    </script>
 </body>
 
 </html>
