--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!--counter-->
 	<div class="days-coming">
 		<div class="container">
-		<h3 class="title tittle">ქორწილი იქნება</h3>
+		<h3 class="title tittle">The Wedding Day</h3>
 			<div class="timer_wrap">
-				<div id="countdown"></div>
+			<div id="counter"></div>
 			<div class="clear fix"></div>
 		</div>
 	</div>
