--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!--//stylesheets-->
 	<link href="//fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+	<link rel="stylesheet" href="css/bpg-mikheil-stefane.min.css">
+
 
 </head>
 
@@ -101,8 +103,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li>
 					
 						<div class="slider-info">
-							<h4>Happy Couples For Ever</h4>
-						    <p>Lorem ipsum dolor sit,</p>
+							<h4 style="font-family: 'BPG Mikheil Stefane', sans-serif;
+							">ბექასა და ნინოკოს ქორწილში</h4>
+						    <p style="font-family: 'BPG Mikheil Stefane', sans-serif;">გეპატიჟებით,</p>
 							
 						</div>
 					</li>
@@ -128,7 +131,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 		<h3 class="title tittle">The Wedding Day</h3>
 			<div class="timer_wrap">
-			<div id="counter"></div>
+				<div id="timer" style="padding-top: 100px;"></div>
+
 			<div class="clear fix"></div>
 		</div>
 	</div>
