--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<link href="//fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 	<link rel="stylesheet" href="css/bpg-mikheil-stefane.min.css">
+	<link rel="stylesheet" href="css/alk-rex-bold.min.css">
 
 
 </head>
@@ -129,7 +130,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!--counter-->
 	<div class="days-coming">
 		<div class="container">
-		<h3 class="title tittle">The Wedding Day</h3>
+		<h3 class="title tittle">ქორწილის დღემდე დარჩა</h3>
 			<div class="timer_wrap">
 				<div id="timer" style="padding-top: 100px;"></div>
 
@@ -147,16 +148,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<h3 class="title tittle">ჩვენი ისტორია</h3>
 			<div class="blog-top-grids">
 				<div class="col-md-7 blog-grid left-side">
-					<h4>Max Will
+					<h4>ბექა ირემაძე
 					</h4>
-					<p class="groom-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed odio consequat, tristique elit sed, molestie nulla. 
-						Mauris et quam leo. Quisque tincidunt facilisis rutrum. Etiam mattis arcu vitae velit sagittis vehicula. Duis posuere 
-						ex in mollis iaculis. Suspendisse tincidunt ut velit id euismod.vulputate turpis porta ex sodales, dignissim hendrerit 
-						eros sagittis. Curabitur lacinia dui ut luctus congue. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras quis 
+					<p class="groom-right">დავიბადე ქალაქ ბათუმში. ჩვენი ისტორია უფრო გვიან,
+						ესე 6 წლის წინ დაწიყო, თუმცა იქამდეც ერთმანეთს კარგად ვიცნობდით, არ ვიცი როგორ და რანირად,
+						მაგრამ ერთმანეთი ძალიან გვიზიდავდა, ერთ საბედისწერო დღესაც :D გამოუტყდი, რომ ის მიყვარდა და 
+						პასუხად მივიღე, რომ აქამდე სად ვიყავი. გაგრძელება კი თქვენც იცით ალბად როგორია 
 			         
 					</p>
 					<div class="w3layouts_more-buttn">
-											<a href="#" data-toggle="modal" data-target="#myModal">Read More</a>
+											<a href="#" data-toggle="modal" data-target="#myModal">სრულად ნახვა</a>
 										</div>
 					</div>
 					<div class="col-md-5 blog-gr">
@@ -167,12 +168,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										<div class="col-md-5 blog-br">
 				</div>
 				<div class="col-md-7 blog-grid right-side">
-					<h4>Lois Lana
+					<h4>მიქელაძე ნინიკო
 					</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed odio consequat, tristique elit sed, molestie nulla. 
-						Mauris et quam leo. Quisque tincidunt facilisis rutrum. Etiam mattis arcu vitae velit sagittis vehicula. Duis posuere 
-						ex in mollis iaculis. Suspendisse tincidunt ut velit id euismod.vulputate turpis porta ex sodales, dignissim hendrerit 
-						eros sagittis. Curabitur lacinia dui ut luctus congue. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras quis 
+					<p>დავიბადე ქალაქ ბათუმში. ერთმანეთი ჩემა ბავშვობის მეგობარმა გაგვაცნო, ნუ ყურადღება თავიდან არც მიმიქცევია
+						თუმცა შემდგომ როცა ჩემი მეგობრის ქორწილი დაიგეგმა მეც მეჯვარე ვიყავი და ისიც, ამიტო რაღაც საინტერესო 
+						ამბავი გვქონდა გასაცნობად ერთმანეთის და აი მაშინ ჩამივარდა გულში. დიახ შემიყვარდა და მართლაც პასუხი ესე 
+						იყო აქამდე სად იყავი :D. გაგრძელება კი ვიცით როგორცაა 
 			         
 					</p>
 					<div class="w3layouts_more-buttn">
