--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 										 <div class="icon_grid_left">
 											 <span class="fa fa-map-marker" aria-hidden="true"></span>
 										 </div>
-										 <h5>Address</h5>
+										 <h5>მისამართი</h5>
 										 <p>ხელვაჩაური,<span>წვეულებათა სახლი ძველი ბათუმი</span></p>
 									 </div>
 									 <div class=" col-md-6 col-sm-6 col-xs-6 footer_grid_left">
@@ -392,7 +392,7 @@
 										 <div class="icon_grid_left">
 											 <span class="fa fa-volume-control-phone" aria-hidden="true"></span>
 										 </div>
-										 <h5> საკონტაქტო</h5>
+										 <h5>კონტაქტი</h5>
 										 <p>+995579056023 <span>+995568331381</span></p>
 									 </div>
 									 <div class="  col-md-6 col-sm-6 col-xs-6 footer_grid_left">
@@ -409,7 +409,7 @@
 					 
 											 <span class="fa fa-clock-o" aria-hidden="true"></span>
 										 </div>
-										 <h5>დაწყების დრო</h5>
+										 <h5>დრო</h5>
 										 <p>
 											 <span>17:30 საათი</span></p>
 											 <div class="clearfix"> </div>
