--- a/index.html
+++ b/index.html
@@ -47,19 +47,7 @@
 <!-- poop up -->
 
 </head>
-<script type="text/javascript">
-	function popup(mylink, windowname) { 
-	  if (! window.focus)return true;
-	  var href;
-	  if (typeof(mylink) == 'string') href=mylink;
-	  else href=mylink.href; 
-	  window.open(href, windowname, 'width=400,height=200,scrollbars=yes'); 
-	  return false; 
-	}
-  </script>
-  
-  <body onLoad="popup('autopopup.html', 'ad')">
-
+<body>
 	
 <div class="banner">
 
