--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 	<link rel="stylesheet" href="css/alk-rex-bold.min.css">
 
 <!-- poop up -->
+<link rel="stylesheet" href="css/pupup.css">
+<script src="js/popup.js"></script>
 
 </head>
 <body>
@@ -464,13 +466,30 @@
 			</div>
 				</div>
 				 -->
+				 <button id="btn-abrir-popup" class="btn-abrir-popup">Abrir Ventana Emergente</button>
+
+				 <div class="overlay" id="overlay">
+					 <div class="popup" id="popup">
+						 <a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup"><i class="fas fa-times"></i></a>
+						 <h3>SUSCRIBETE</h3>
+						 <h4>y recibe un cupon de descuento.</h4>
+						 <form action="">
+							 <div class="contenedor-inputs">
+								 <input type="text" placeholder="Nombre">
+								 <input type="email" placeholder="Correo">
+							 </div>
+							 <input type="submit" class="btn-submit" value="Suscribirse">
+						 </form>
+					 </div>
+				 </div>
+				 <!-- popup -->
 				<footer>
 				<p>  &copy; 2022 BN. All Rights Reserved | Design by <a href="https://fb.com/beqa.ne" target="_blank"> Beka iremadze </a></p>
 	</footer>
 
 
 	<!--js working-->
-
+	<script src="js/popup.js"></script>
 	<!-- //js  working-->
 
 			<!--  light box js -->
