--- a/index.html
+++ b/index.html
@@ -470,16 +470,12 @@
 
 				 <div class="overlay" id="overlay">
 					 <div class="popup" id="popup">
-						 <a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup"><i class="fas fa-times"></i></a>
-						 <h3>SUSCRIBETE</h3>
-						 <h4>y recibe un cupon de descuento.</h4>
-						 <form action="">
-							 <div class="contenedor-inputs">
-								 <input type="text" placeholder="Nombre">
-								 <input type="email" placeholder="Correo">
-							 </div>
-							 <input type="submit" class="btn-submit" value="Suscribirse">
-						 </form>
+						 <a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup">გათიშვა</a>
+						 <h3>მოგესალმებით</h3>
+						 <h4>გეპატიჟებით ბექასა და ნინიკოს ქორწილში.</h4>
+						 <h4>ჩამოსქროლე და გაიგე</h4>
+							 
+						
 					 </div>
 				 </div>
 				 <!-- popup -->
