--- a/index.html
+++ b/index.html
@@ -470,10 +470,10 @@
 
 				 <div class="overlay" id="overlay">
 					 <div class="popup" id="popup">
-						 <a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup">გათიშვა</a>
+						 <a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup">გათიშვა<img src="https://cdn-icons-png.flaticon.com/512/1828/1828665.png" width="32"></a>
 						 <h3>მოგესალმებით</h3>
 						 <h4>გეპატიჟებით ბექასა და ნინიკოს ქორწილში.</h4>
-						 <h4>ჩამოსქროლე და გაიგე</h4>
+						 <h4>ჩამოსქროლე ან დააწექი ღილაკს გათიშე</h4>
 							 
 						
 					 </div>
