--- a/index.html
+++ b/index.html
@@ -470,11 +470,11 @@
 
 				 <div class="overlay" id="overlay">
 					 <div class="popup" id="popup">
-						 <a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup">გათიშვა<img src="https://cdn-icons-png.flaticon.com/512/1828/1828665.png" width="32"></a>
+						 <a href="#" id="btn-cerrar-popup" class="btn-cerrar-popup">გათიშვა<img src="https://cdn-icons-png.flaticon.com/512/1828/1828665.png" style="width:32px;"></a>
 						 <h3 style=" font-family: 'ALK Rex Bold', sans-serif;">მოგესალმებით</h3>
 						 <h4 style=" font-family: 'ALK Rex Bold', sans-serif;">გეპატიჟებით ბექასა და ნინიკოს ქორწილში.</h4>
 						 <h4 style=" font-family: 'ALK Rex Bold', sans-serif;">ჩამოსქროლე</h4>
-						 <h4 style=" font-family: 'ALK Rex Bold', sans-serif;">ან დააწექი ღილაკს გათიშე</h4>
+						 <h4 style=" font-family: 'ssssALK Rex Bold', sans-serif;">ან დააწექი ღილაკს გათიშე</h4>
 							 
 						
 					 </div>
