--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 										 <div class="clearfix"> </div>
 								 </div>
 						<div class="col-md-6 contact-us">
-						 <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4190.180034983091!2d41.61768265372399!3d41.613815234088115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40678f0cd83d351b%3A0xb1ec8d954cb57ec4!2sOld%20Batumi!5e0!3m2!1sru!2sge!4v1662738443249!5m2!1sru!2sge" style="border:0;style: 100%;width: 100%;height: 50%;opacity: 0.5;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+						 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4190.180034983091!2d41.61768265372399!3d41.613815234088115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40678f0cd83d351b%3A0xb1ec8d954cb57ec4!2sOld%20Batumi!5e0!3m2!1sru!2sge!4v1662738443249!5m2!1sru!2sge" style="border:0;style: 100%;width: 100%;height: 50%;opacity: 0.5;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 										   </div>
 							
 										 <div class="clearfix"> </div>
