--- a/index.html
+++ b/index.html
@@ -385,10 +385,10 @@
 					 <div class=" col-md-6 contact-icons">
 									 <div class=" col-md-6 col-sm-6 col-xs-6 footer_grid_left">
 										 <div class="icon_grid_left">
-											 <span class="fa fa-map-marker" aria-hidden="true"></span>
+											<a href="https://goo.gl/maps/5gbeeM75fBUzBtW97"> <span class="fa fa-map-marker" aria-hidden="true"></span></a>
 										 </div>
 										 <h5>მისამართი</h5>
-										 <p>ხელვაჩაური,<span>წვეულებათა სახლი ძველი ბათუმი</span></p>
+										 <a href="https://goo.gl/maps/5gbeeM75fBUzBtW97"><p>ხელვაჩაური,<span>წვეულებათა სახლი ძველი ბათუმი  </span></p></a>
 									 </div>
 									 <div class=" col-md-6 col-sm-6 col-xs-6 footer_grid_left">
 					 
